Wrong height jumbotron home fixed.

--- a/Frontend/less/custom.less
+++ b/Frontend/less/custom.less
@@ -342,11 +342,11 @@ footer {
 		margin-top: @header-height;
 	}
 
-	height: 450px;
+	/*height: 450px;*/
 
-	@media(max-width:@screen-xs-max){
+	/*@media(max-width:@screen-xs-max){
 		height: 500px;
-	}
+	}*/
 
 	.carousel-inner {
 		height: 100%;
