--- a/Frontend/less/home.less
+++ b/Frontend/less/home.less
@@ -17,7 +17,7 @@
 }
 
 #posts-teaser {
-	margin-top: 100px;
+	margin-top: 40px;
 	margin-bottom: 150px;
 
 	@media (max-width: @screen-xs-max) {
